K8S/command-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: command-service
  template:
    metadata:
      labels:
        app: command-service
    spec:
      containers:
        - name: command-service
          image: thenamellessone/command-service
---
apiVersion: v1
kind: Service
metadata:
  name: command-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: command-service
  ports:
    - name: command-service
      protocol: TCP
      port: 80
      targetPort: 80
