K8S/platform-np-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-np-service
spec:
  type: NodePort
  selector:
    app: platform-service
  ports:
    - name: platform-service
      protocol: TCP
      port: 80
      targetPort: 80
