K8S/product-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: thenamellessone/product-service
---
apiVersion: v1
kind: Service
metadata:
  name: product-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
    - name: product-service
      protocol: TCP
      port: 80
      targetPort: 80
    - name: platform-grpc
      protocol: TCP
      port: 666
      targetPort: 666
